# deft

./: .gitignore  CMakeLists.txt  cloudlab.md  cxl_plan.md  deft_report.fdb_latexmk  deft_report.fls  phase3_tasks.md  profile.py
build_cxl/: CMakeCache.txt  Makefile  client  client_non_stop  cmake_install.cmake  server  skiplist_test
cloudlab/: profile.py
cs6204/: deft_discussion.tex  deft_final_presentaion.tex  deft_report_1.tex  original_deft_setup.md  readme.md  report1_feedback.md  writing.md
docs/: benchmark_plan.md  cxl_architecture.md  cxl_porting_walkthrough.md
include/: AbstractMessageConnection.h  Common.h  Config.h  CxlTransport.h  Directory.h  DirectoryConnection.h  HugePageAlloc.h  RawMessageConnection.h  Rdma.h  ThreadConnection.h  connection.h  dsm_client.h  dsm_keeper.h  dsm_server.h
provision/: readme.md  run_clients.sh  run_servers.sh  setup_all.sh  setup_mn.sh
script/: all_hugepage.py  build_cxl.sh  clean_reinstall.sh  cloudlab_catchup.sh  cloudlab_rebuild.sh  cloudlab_run.sh  cloudlab_setup.sh  dd.sh  fix_rdma_drivers.sh  gen_config.py  gen_config_cxl.py  install_rdma_drivers.sh  killall.py  link_cluster.sh  mount_deft_code.sh  net_heal.sh  normalize_rdma_cluster.sh  plot_breakage_report.py  plot_campaign.py  plot_comparison.py  plot_regression.py  qp_rootcause_dump.sh  rdma_rootcause_dump.sh  restartMemc.sh  run_bench.py  run_breakage_plan.sh  run_campaign.py  run_comparison.sh  ssh_connect.py
src/: AbstractMessageConnection.cpp  Cache.cpp  Common.cpp  Debug.cpp  Directory.cpp  DirectoryConnection.cpp  RawMessageConnection.cpp  ThreadConnection.cpp  dsm_client.cpp  dsm_keeper.cpp  dsm_server.cpp
src/cxl/: CxlTransport.cpp
src/rdma/: Resource.cpp  StateTrans.cpp  Utility.cpp
test/: client.cpp  server.cpp
tmp_campaign/: runs.csv
tmp_campaign/plots/: summary.txt
